# opensmtpd-filter-sake

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  start_test.py
.github/workflows/: ci.yml
man/en/: filter-sake.8
pwa/: app.js  index.html  manifest.webmanifest  sw.js
src/: address.rs  code.rs  config.rs  input.rs  main.rs  service.rs
