[package]
name = "opensmtpd-filter-sake"
version = "0.1.0"
authors = ["Rodolphe Bréard <rodolphe@what.tf>"]
edition = "2021"
description = "Sub-address key filter for OpenSMTPD"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
clap = { version = "4.3.11", default-features = false, features = ["derive", "std"] }
data-encoding = { version = "2.4.0", default-features = false, features = ["std"] }
