[package]
name = "filter-sake"
version = "1.0.0"
authors = ["Rodolphe Bréard <v.code.ngyvz7vf@what.tf>"]
edition = "2021"
description = "Sub-address key filter for OpenSMTPD"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
clap = { version = "4.3.11", default-features = false, features = ["derive", "std"] }
data-encoding = { version = "2.4.0", default-features = false, features = ["std"] }
hmac = { version = "0.12.1", default-features = false }
idna = { version = "0.4.0", default-features = false, features = ["std"] }
sha2 = { version = "0.10.7", default-features = false, features = ["std", "asm"] }
